--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -406,6 +406,7 @@ header-y += ion.h
 header-y += msm_audio.h
 header-y += msm_audio_7X30.h
 header-y += msm_audio_amrnb.h
+header-y += msm_audio_aac.h
 header-y += msm_audio_qcp.h
 header-y += msm_ion.h
 header-y += msm_kgsl.h
